--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bump": "standard-version"
   },
   "dependencies": {
+    "@darkobits/assert-is": "^1.1.1",
     "@darkobits/log": "1.1.0-beta.0",
     "ajv": "^6.2.1",
     "axios": "^0.18.0",
@@ -55,7 +56,8 @@
     "open": "0.0.5",
     "querystring": "^0.2.0",
     "signal-exit": "^3.0.2",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "yargs": "^11.0.0"
   },
   "devDependencies": {
     "babel-cli": "6.x",
@@ -79,6 +81,7 @@
     ],
     "space": true,
     "rules": {
+      "camelcase": "off",
       "capitalized-comments": "warn",
       "import/no-extraneous-dependencies": "off",
       "import/no-unassigned-import": "off",
