--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Securely route Twilio applications to a local server.",
   "version": "0.2.0",
   "author": "darkobits",
+  "license": "WTFPL",
   "repository": {
     "type": "git",
     "url": "https://github.com/darkobits/twilio-local.git"
@@ -31,75 +32,64 @@
   },
   "main": "dist/twilio-local.js",
   "scripts": {
-    "lint": "xo",
+    "clean": "rimraf dist",
+    "check:styles": "tslint --project tsconfig.json --format codeFrame",
+    "check:types": "tsc --emitDeclarationOnly --pretty; rimraf **/*.spec.d.ts",
     "test": "jest",
-    "prebuild": "rimraf dist",
-    "build": "babel src --out-dir dist",
-    "prebump": "run-p lint test build",
+    "prebuild": "run-p clean check:*",
+    "build": "babel src --extensions='.ts' --ignore='**/*.spec.ts,**/*.d.ts' --out-dir=dist --source-maps=inline",
+    "prebump": "run-p test build",
     "bump": "standard-version"
   },
   "dependencies": {
-    "@darkobits/assert-is": "^1.1.1",
-    "@darkobits/log": "1.1.0-beta.0",
-    "ajv": "^6.2.1",
+    "@darkobits/log": "^1.1.0",
+    "ajv": "^6.5.0",
     "axios": "^0.18.0",
-    "babel-eslint": "^8.2.2",
-    "camelcase": "^4.1.0",
-    "chalk": "^2.3.2",
+    "babel-eslint": "^8.2.3",
+    "camelcase": "^5.0.0",
+    "chalk": "^2.4.1",
     "convert-hrtime": "^2.0.0",
-    "cosmiconfig": "^4.0.0",
+    "cosmiconfig": "^5.0.5",
     "dotenv": "^5.0.1",
-    "moment": "^2.21.0",
-    "ngrok": "^3.0.0",
+    "moment": "^2.22.2",
+    "ngrok": "^3.0.1",
     "node-cleanup": "^2.1.2",
-    "nodemon": "^1.17.1",
+    "nodemon": "^1.17.5",
     "open": "0.0.5",
     "querystring": "^0.2.0",
     "signal-exit": "^3.0.2",
     "uuid": "^3.2.1",
-    "yargs": "^11.0.0"
+    "yargs": "^11.1.0"
   },
   "devDependencies": {
-    "babel-cli": "6.x",
-    "babel-jest": "^22.4.1",
-    "babel-plugin-module-resolver": "^3.1.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "1.x",
-    "jest": "^22.4.2",
-    "npm-run-all": "4.x",
+    "@babel/cli": "^7.0.0-beta.49",
+    "@babel/core": "^7.0.0-beta.49",
+    "@babel/node": "^7.0.0-beta.49",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.49",
+    "@babel/plugin-proposal-decorators": "^7.0.0-beta.49",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
+    "@babel/preset-stage-3": "^7.0.0-beta.49",
+    "@babel/preset-typescript": "^7.0.0-beta.49",
+    "@types/camelcase": "^4.1.0",
+    "@types/cosmiconfig": "^5.0.1",
+    "@types/dotenv": "^4.0.3",
+    "@types/jest": "^23.0.0",
+    "@types/node": "^10.3.0",
+    "@types/node-cleanup": "^2.1.0",
+    "@types/open": "0.0.29",
+    "@types/uuid": "^3.4.3",
+    "@types/yargs": "^11.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.0.1",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "jest": "^23.1.0",
+    "npm-run-all": "^4.1.3",
     "rimraf": "2.6.x",
-    "standard-version": "^4.3.0",
+    "standard-version": "^4.4.0",
     "strip-ansi": "^4.0.0",
-    "xo": "0.18.x"
-  },
-  "xo": {
-    "parser": "babel-eslint",
-    "env": [
-      "node",
-      "jest"
-    ],
-    "space": true,
-    "rules": {
-      "camelcase": "off",
-      "capitalized-comments": "warn",
-      "import/no-extraneous-dependencies": "off",
-      "import/no-unassigned-import": "off",
-      "import/no-unresolved": "off",
-      "import/prefer-default-export": "off",
-      "max-nested-callbacks": "off",
-      "max-params": "off",
-      "new-cap": "off",
-      "no-multiple-empty-lines": "off",
-      "no-prototype-builtins": "off",
-      "prefer-arrow-callback": "off",
-      "space-before-function-paren": [
-        "error",
-        {
-          "named": "always"
-        }
-      ],
-      "unicorn/filename-case": "off"
-    }
+    "tslint": "^5.10.0",
+    "tslint-xo": "^0.8.0",
+    "typescript": "^2.9.1"
   }
 }
