--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "ngrok": "^3.0.1",
     "node-cleanup": "^2.1.2",
     "nodemon": "^1.17.5",
-    "open": "0.0.5",
+    "opn": "^5.3.0",
     "querystring": "^0.2.0",
     "signal-exit": "^3.0.2",
     "uuid": "^3.2.1",
