chore: Update dependencies.

--- a/package.json
+++ b/package.json
@@ -42,42 +42,47 @@
     "link": "npm run build -- --out-dir $(npx clean-link-dir)/dist --watch"
   },
   "dependencies": {
+    "@babel/node": "^7.0.0-beta.51",
     "@darkobits/log": "^1.1.0",
-    "ajv": "^6.5.0",
+    "ajv": "^6.5.1",
     "axios": "^0.18.0",
-    "babel-eslint": "^8.2.3",
     "camelcase": "^5.0.0",
     "chalk": "^2.4.1",
     "convert-hrtime": "^2.0.0",
     "cosmiconfig": "^5.0.5",
     "dotenv": "^6.0.0",
+    "fs-extra": "^6.0.1",
     "moment": "^2.22.2",
     "ngrok": "^3.0.1",
     "node-cleanup": "^2.1.2",
     "nodemon": "^1.17.5",
     "opn": "^5.3.0",
+    "pkg-dir": "^3.0.0",
     "querystring": "^0.2.0",
     "signal-exit": "^3.0.2",
     "uuid": "^3.2.1",
     "yargs": "^11.1.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.49",
-    "@babel/core": "^7.0.0-beta.49",
-    "@babel/node": "^7.0.0-beta.49",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.49",
-    "@babel/plugin-proposal-decorators": "^7.0.0-beta.49",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.49",
-    "@babel/preset-env": "^7.0.0-beta.49",
-    "@babel/preset-stage-3": "^7.0.0-beta.49",
-    "@babel/preset-typescript": "^7.0.0-beta.49",
+    "@babel/cli": "^7.0.0-beta.51",
+    "@babel/core": "^7.0.0-beta.51",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.51",
+    "@babel/plugin-proposal-decorators": "^7.0.0-beta.51",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.51",
+    "@babel/preset-env": "^7.0.0-beta.51",
+    "@babel/preset-stage-3": "^7.0.0-beta.51",
+    "@babel/preset-typescript": "^7.0.0-beta.51",
+    "@darkobits/clean-link": "^2.0.0",
     "@types/camelcase": "^4.1.0",
-    "@types/cosmiconfig": "^5.0.1",
+    "@types/cosmiconfig": "^5.0.3",
     "@types/dotenv": "^4.0.3",
-    "@types/jest": "^23.0.0",
-    "@types/node": "^10.3.0",
+    "@types/fs-extra": "^5.0.3",
+    "@types/get-port": "^3.2.0",
+    "@types/jest": "^23.1.1",
+    "@types/node": "^10.3.4",
     "@types/node-cleanup": "^2.1.0",
-    "@types/open": "0.0.29",
+    "@types/opn": "^5.1.0",
+    "@types/pkg-dir": "^2.0.0",
     "@types/uuid": "^3.4.3",
     "@types/yargs": "^11.0.0",
     "babel-core": "^7.0.0-bridge.0",
@@ -90,6 +95,6 @@
     "strip-ansi": "^4.0.0",
     "tslint": "^5.10.0",
     "tslint-xo": "^0.8.0",
-    "typescript": "^2.9.1"
+    "typescript": "^2.9.2"
   }
 }
