--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
   },
   "main": "dist/index.js",
   "scripts": {
-    "clean": "rimraf dist",
+    "clean": "del dist",
     "check:styles": "tslint --project tsconfig.json --format codeFrame",
-    "check:types": "tsc --emitDeclarationOnly --pretty && rimraf **/*.spec.d.ts",
+    "check:types": "tsc --emitDeclarationOnly --pretty && del **/*.spec.d.ts",
     "test": "jest",
     "prebuild": "run-p clean check:*",
     "build": "babel src --extensions='.ts' --ignore='**/*.spec.ts,**/*.d.ts' --out-dir=dist --source-maps=inline --verbose",
@@ -42,58 +42,58 @@
     "link": "npm run build -- --out-dir $(npx clean-link-dir)/dist --watch"
   },
   "dependencies": {
-    "@babel/node": "^7.0.0-beta.51",
     "@darkobits/log": "^1.1.3",
-    "ajv": "^6.5.1",
+    "ajv": "^6.5.2",
     "axios": "^0.18.0",
     "camelcase": "^5.0.0",
     "chalk": "^2.4.1",
     "convert-hrtime": "^2.0.0",
     "cosmiconfig": "^5.0.5",
     "dotenv": "^6.0.0",
-    "fs-extra": "^6.0.1",
+    "fs-extra": "^7.0.0",
     "moment": "^2.22.2",
     "ngrok": "^3.0.1",
     "node-cleanup": "^2.1.2",
-    "nodemon": "^1.17.5",
+    "nodemon": "^1.18.3",
     "opn": "^5.3.0",
     "pkg-dir": "^3.0.0",
     "querystring": "^0.2.0",
     "signal-exit": "^3.0.2",
-    "uuid": "^3.2.1",
-    "yargs": "^11.1.0"
+    "uuid": "^3.3.2",
+    "yargs": "^12.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.51",
-    "@babel/core": "^7.0.0-beta.51",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.51",
-    "@babel/plugin-proposal-decorators": "^7.0.0-beta.51",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.51",
-    "@babel/preset-env": "^7.0.0-beta.51",
-    "@babel/preset-stage-3": "^7.0.0-beta.51",
-    "@babel/preset-typescript": "^7.0.0-beta.51",
+    "@babel/cli": "^7.0.0-beta.54",
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/node": "^7.0.0-beta.54",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.54",
+    "@babel/plugin-proposal-decorators": "^7.0.0-beta.54",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
+    "@babel/preset-stage-3": "^7.0.0-beta.54",
+    "@babel/preset-typescript": "^7.0.0-beta.54",
     "@darkobits/clean-link": "^2.0.1",
     "@types/camelcase": "^4.1.0",
     "@types/cosmiconfig": "^5.0.3",
     "@types/dotenv": "^4.0.3",
-    "@types/fs-extra": "^5.0.3",
+    "@types/fs-extra": "^5.0.4",
     "@types/get-port": "^3.2.0",
-    "@types/jest": "^23.1.1",
-    "@types/node": "^10.3.5",
+    "@types/jest": "^23.3.0",
+    "@types/node": "^10.5.2",
     "@types/node-cleanup": "^2.1.0",
     "@types/opn": "^5.1.0",
     "@types/pkg-dir": "^2.0.0",
     "@types/uuid": "^3.4.3",
-    "@types/yargs": "^11.0.0",
+    "@types/yargs": "^11.1.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.0.1",
+    "babel-jest": "^23.4.0",
     "babel-plugin-module-resolver": "^3.1.1",
-    "jest": "^23.1.0",
+    "del-cli": "^1.1.0",
+    "jest": "^23.4.1",
     "npm-run-all": "^4.1.3",
-    "rimraf": "2.6.x",
     "standard-version": "^4.4.0",
     "strip-ansi": "^4.0.0",
-    "tslint": "^5.10.0",
+    "tslint": "^5.11.0",
     "tslint-xo": "^0.8.0",
     "typescript": "^2.9.2"
   }
